Add a container div with an explanation of the site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <script src="js/scripts.js" defer></script>
 </head>
 <body>
-
+  <div class="container">
+    <h1>Triangle Tracker</h1>
+    <p>input the lengths of the sides of a triangle to check what triangle it is</p>
+  </div>
 </body>
 </html>
