Add form and result div

--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
   <div class="container">
     <h1>Triangle Tracker</h1>
     <p>input the lengths of the sides of a triangle to check what triangle it is</p>
+    <!-- form -->
+    <div>
+      <form id="form">
+        <div class="form-row">
+          <!-- side-1 input-->
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="side1">Side 1:</label>
+              <input class="form-control" id="side1" type="text" required>
+            </div>
+          </div>
+          <!-- side-2 input-->
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="side2">Side 2:</label>
+              <input class="form-control" id="side2" type="text" required>
+            </div>
+          </div>
+          <!-- side-3 input -->
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="side3">Side 3:</label>
+              <input class="form-control" id="side3" type="text" required>
+            </div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div>
+
+    <!-- result -->
+    <p id="result"></p>
   </div>
 </body>
 </html>
